Feat: User create endpoints
